# VOID

./: .gitignore  README.md
docs/: ARCHITECTURE.md  INCO.md  MagicBlock.md  PROTOCOL_FLOW.md  Quicknode.md  ROADMAP.md  TRACKS_AND_PARTNERS.md
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
extension/functions/: console_logs.js  encryption.js  phantom-signer.js  porto-blocker.js  solana-intent-builder.js  solana-transaction-interceptor.js  tee-client.js  wallet-injector.js
server/: .gitignore  .tee-keypair.json  MAGICBLOCK_AUTH.md  MAGICBLOCK_FULL_INTEGRATION.md  MAGICBLOCK_INTEGRATION.md  build-anchor.ps1  build-anchor.sh  build-native.ps1  build-native.sh  executor-deployment.json  executor-solana-deployment.json  inco-handler.js  package-lock.json  package-solana.json  package.json  server.js
server/cache/: solidity-files-cache.json
server/modules/: intent.js  logger.js  magicblock.js  pool-discovery.js  raydium-v2.js  raydium.js  signature.js  swap-executor.js  tee.js  transaction.js
server/programs/anonymaus-executor/: Cargo.toml
server/programs/anonymaus-executor/src/: lib.rs
server/programs/anonymous-executor-anchor/programs/anonymous-executor-anchor/: Cargo.toml
server/programs/anonymous-executor-anchor/programs/anonymous-executor-anchor/src/: lib-inco-backup.rs  lib.rs
server/scripts/: check-executor-setup.js  create-token-and-pool.js  deploy-solana-program.js  extract-pool-from-url.js  find-execution-key.js  initialize-solana-program.js  test-magicblock-integration.js  test-magicblock-swap.js
server/test_magic/: Cargo.toml  README.md  build.ps1  build.sh  init-and-test.js  package-lock.json  package.json
server/test_magic/src/: lib.rs
sol_setup/: README.md  package-lock.json  package.json
sol_setup/scripts/: fund-wallet.js  generate-wallet.js
test_inco/: README.md  package-lock.json
test_inco/tests/inco/: full-flow.cjs
tests/sol_setup/: .gitignore
tests/test_inco/: package.json
tests/test_magic/: deploy.js  test-full.js  test.js
(+11 files in other folders)
