[package]
name = "void-executor"
version = "0.1.0"
description = "Void Executor Program for Solana - Native Implementation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "void_executor"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "~1.18"
